--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -16,7 +16,7 @@ general {
 
 order += "volume master"
 order += "disk /"
-order += "wireless wlan0"
+order += "wireless wlp2s0"
 order += "battery 0"
 order += "cpu_temperature 0"
 order += "load"
@@ -28,7 +28,7 @@ volume master {
 	mixer = "Master"
 	mixer_idx = 0
 }
-wireless wlan0 {
+wireless wlp2s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
 }
@@ -61,6 +61,7 @@ load {
 
 cpu_temperature 0 {
         format = "T: %degrees °C"
+        path="/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp2_input"
 }
 
 disk "/" {
